    * 4081 FIX: dell_powerconnect_cpu: Fixed broken metrics

    Multisite:
    * 4072 FIX: Fixed multiple issues in BI availability when groups or names contain umlauts
    * 4080 FIX: Fixed possible exception "unsupported operand type" in matrix views
    * 4127 FIX: Fixed possible "maximum recursion depth exceeded" error when sorting tables with a lot of text in cells

    WATO:
    * 4068 FIX: Fixed possible exception in case of wrong automation secrets between multiple sites...
    * 4076 FIX: Git integration: Using mail address of user in author info
    * 4077 FIX: Fixed "Request URI too long" when cloning role after editing another one
    * 4079 FIX: Improved error handling in case a WATO folder can not be written
    * 4082 FIX: Icon selector: Fixed exception in case non images are saved in icon folder
    * 4084 FIX: Improved error handling in case of broken hosts.mk files


1.4.0i2p4:
    Checks & Agents:
    * 3750 FIX: cmc_temp: Check now also works when using Nagios core
    * 3983 FIX: mssql_instance: Be more robust agains missing instance info in case of connection issues
    * 3963 FIX: check_mk_agent.linux: fixed strayed output of postfix status command
    * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
    * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...
    * 4088 FIX: ntp: fixed incomplete data handling
    * 4090 FIX: apc_rackpdu_power, apc_symmetra, apc_symmetra_input, apc_symmetra_output: some fixes...
    * 4091 FIX: oracle_tablespace: Werk 3907 broke the detection of UNDO- and TEMP-Tablespaces

    WATO:
    * 3982 FIX: Some MKPs created with WATO could not be uploaded to the Check_MK Exchange

    BI:
    * 3991 FIX: BI Aggregations: no longer show duplicate aggregations when an aggregation has mulitple groups

    Livestatus: