@@ -1,0 +1,10 @@
+Title: Fixed exception in "Virtual host tree" snapin in case a user tries to access a not existing tree
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2p5
+Date: 1480941304
+
+
